# magic-loc-rs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  partitions.csv
.cargo/: config.toml
lsm6dso/: Cargo.toml
lsm6dso/src/: lib.rs  ll.rs  uninitialized.rs
scripts/: flash-all-anchors.sh  flash-all.sh
src/: config.rs  main.rs  util.rs
src/operations/: anchor.rs  common.rs  host.rs  mod.rs  tag.rs
src/tasks/: battery_manager.rs  imu_task.rs  mod.rs  serial_comm.rs  sync_trigger.rs  unit_test.rs  uwb_anchor.rs  uwb_recv.rs  uwb_sniffer.rs  uwb_task.rs
