[package]
name = "magic-loc-rs"
version = "0.1.0"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["lsm6dso"]

[dependencies]
# esp-wifi = { git = "https://github.com/esp-rs/esp-wifi/", branch = "main", features = [
#     "esp32s3",
#     "esp-now",
#     "phy-enable-usb",
# ] }
dw3000-ng = { package = "dw3000-ng", git = "https://github.com/ProfFan/dw3000", rev = "102938ff4ec42aa95335517d126119f8448f3488", features = [
    "defmt",
] }
lsm6dso = { package = "lsm6dso", path = "lsm6dso" }
magic-loc-protocol = { package = "magic-loc-protocol", git = "ssh://git@github.com/ProfFan/magic-loc-protocol.git", rev = "3fb1f311063ecaf0b535cda94359ef76834a6f8e" }

hal = { package = "esp32s3-hal", git = "https://github.com/ProfFan/esp-hal", branch = "consistent-spi-timing", features = [
    "embassy",
    "embassy-executor-interrupt",
    "embassy-executor-thread",
    "embassy-time-systick",
    "async",
    "defmt",
] }
static_cell = { version = "*", features = ["nightly"] }
embedded-hal = "*"
embedded-hal-async = "=1.0.0-rc.1"
esp-backtrace = { version = "0.9.0", default-features = false, features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-jtag-serial",
] }
esp-println = { git = "https://github.com/ProfFan/esp-println", branch = "fifo", default-features = false, features = [
    "esp32s3",
    "log",
    "defmt-espflash",
    "jtag_serial",
    "critical-section",
] }

# esp-println = { version = "0.7.1", default-features = false, features = [
esp-storage = { git = "https://github.com/esp-rs/esp-storage", branch = "main", features = [
    "esp32s3",
] }
embedded-storage = "0.3.0"
# postcard = { version = "1.0.*", features = ["use-defmt"] }

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.*", default-features = false }
binrw = { version = "0.13.1", default-features = false }
zerocopy = "0.X"
zerocopy-derive = "0.X"

# log = { version = "0.4.18" }
defmt = { package = "defmt", version = "*", features = ["encoding-rzcobs"] }

esp-alloc = { version = "0.3.0" }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "medium-ieee802154",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
embassy-executor = { version = "0.3.0", features = ["nightly"] }
embassy-time = { version = "0.1.5", features = ["nightly", "defmt"] }
embassy-futures = "*"
embassy-sync = "*"

scopeguard = { version = "^1.2.0", default-features = false }

esp-partition-table = "~0.1"
arbitrary-int = "^1.2"

[patch.crates-io]
bitvec = { git = "https://github.com/ProfFan/bitvec", rev = "44c7f97a11cb8e218a21f84fe2e7a5a6c7983cba", features = [
    "serde",
    "alloc",
] }

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "fat"
opt-level = 3

[package.metadata.espflash]
partition_table = "partitions.csv"
