[package]
name = "magic-loc-rs"
version = "0.1.0"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["lsm6dso"]

[dependencies]
esp-wifi = { version = "0.3.0", default-features = false, features = [
    "esp32s3",
    "esp-now",
    "phy-enable-usb",
] }
dw3000-ng = { package = "dw3000-ng", version = "0.5", features = ["defmt"] }
lsm6dso = { package = "lsm6dso", path = "lsm6dso" }
magic-loc-protocol = { package = "magic-loc-protocol", git = "https://github.com/ProfFan/magic-loc-protocol.git", rev = "25aacb383e95125ddfbffb110beae1ff5c9a095b" }

hal = { package = "esp32s3-hal", git = "https://github.com/ProfFan/esp-hal.git", rev = "e79616960cad67ad19b32c1d228378dc93bdc799", default-features = false, features = [
    "rt",
    "vectored",
    "embassy",
    "embassy-executor-interrupt",
    "embassy-executor-thread",
    "embassy-time-systick",
    "async",
    "defmt",
] }

static_cell = { version = "*", features = ["nightly"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.1.0"

esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", branch = "main", default-features = false, features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "defmt",
    "colors",
    "halt-cores",
] }
esp-println = { git = "https://github.com/esp-rs/esp-println", branch = "main", default-features = false, features = [
    "esp32s3",
    "log",
    # "defmt-espflash",
    "jtag-serial",
    "critical-section",
] }

bbqueue = { version = "0.5.1" }

# esp-println = { version = "0.7.1", default-features = false, features = [
esp-storage = { git = "https://github.com/esp-rs/esp-storage", branch = "main", features = [
    "esp32s3",
] }
embedded-storage = "0.3.0"
# postcard = { version = "1.0.*", features = ["use-defmt"] }

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.*", default-features = false }
binrw = { version = "0.13.1", default-features = false }
zerocopy = "0.X"
zerocopy-derive = "0.X"

critical-section = { version = "1.1.2", default-features = false }

# log = { version = "0.4.18" }
defmt = { package = "defmt", version = "*", features = ["encoding-rzcobs"] }

esp-alloc = { version = "0.3.0" }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "medium-ieee802154",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.27.0", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
heapless = { version = "0.8", default-features = false, features = [
    "defmt-03",
] }
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = { version = "0.3.0", features = ["defmt", "generic-queue-16", "tick-hz-16_000_000"] }
embassy-futures = "*"
embassy-sync = "*"
embassy-embedded-hal = { version = "0.1", features = ["defmt"] }

scopeguard = { version = "^1.2.0", default-features = false }

esp-partition-table = "~0.1"
arbitrary-int = "^1.2"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
lto = "thin"
[profile.release]
lto = "fat"
opt-level = 3
debug = true

[package.metadata.espflash]
partition_table = "partitions.csv"

[patch.crates-io]
esp-hal = { git = "https://github.com/ProfFan/esp-hal", rev = "e79616960cad67ad19b32c1d228378dc93bdc799", package = "esp-hal" }
esp32s3-hal = { git = "https://github.com/ProfFan/esp-hal", rev = "e79616960cad67ad19b32c1d228378dc93bdc799", package = "esp32s3-hal" }
