[package]
name = "lsm6dso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.*"
embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
log = { version = "0.4.18" }
defmt = "*"

[features]
default = ["async"]
async = ["dep:embedded-hal-async"]
blocking = []

# async dependencies
